--- a/yellow-paper/docs/public-vm/instruction-set.mdx
+++ b/yellow-paper/docs/public-vm/instruction-set.mdx
@@ -1,5 +1,13 @@
 # Instruction Set
 
+This page lists all of the instructions supported by the Aztec Virtual Machine (AVM).
+
+The following notes are relevant to the table and sections below:
+- `M[offset]` notation is shorthand for `context.machineState.memory[offset]`
+- Any instruction whose description does not mention a program counter change simply increments it: `context.machineState.pc++`
+- All instructions update `context.machineState.*GasLeft` as detailed in ["Gas limits and tracking"](./avm#gas-limits-and-tracking)
+- Any instruction can lead to an exceptional halt as specified in ["Exceptional halting"](./avm#exceptional-halting)
+
 import GeneratedInstructionSet from "./gen/_InstructionSet.mdx";
 
 <GeneratedInstructionSet />
